--- a/src/main/resources/initTableXml.vm
+++ b/src/main/resources/initTableXml.vm
@@ -1,10 +1,8 @@
 #set ( $table = $dalgen )
-<table sqlname="${table.sqlName}" physicalName="${table.physicalName}" remark="${table.remark}">
-
-
+<table sqlname="${table.sqlName}" javaName="$table.javaName" physicalName="${table.physicalName}" remark="${table.remark}">
 
 #foreach ( $column in $table.columnList )
-     <column name="$column.sqlName" javaType = "$column.javaType" sqlType = "$column.sqlType"/>
+     <column name="$column.sqlName" sqlType = "$column.sqlType" javaName="$column.javaName" javaType = "$column.javaType" remark="$column.remarks"/>
 #end
 
      <operation name="insert" paramtype="object" remark="插入表:${table.sqlName}">
@@ -14,7 +12,7 @@
          </selectKey>
           INSERT INTO ${table.sqlName}(
 #foreach($column in $table.columnList)
-            #if( $velocityCount != 1),#end $column.sqlName
+            #if( $velocityCount != 1),#end$column.sqlName
 #end
           )VALUES(
 #foreach($column in $table.columnList)
@@ -22,24 +20,22 @@
 #end
           )
      </operation>
+
      <operation name="update" paramType="object" remark="更新表:${table.sqlName}">
         UPDATE ${table.sqlName} SET
 #foreach ( $column in $table.columnList )
-         #if($velocityCount != 1),#end $column.sqlName = $column.javaName
+         #if($velocityCount != 1),#end$column.sqlName = $column.javaName
 #end
         WHERE id = id
      </operation>
-
 
      <operation name = "deleteById" multiplicity="one" remark="根据ID删除数据:${table.sqlName}">
         DELETE FROM ${table.sqlName} WHERE id = id
      </operation>
      <operation name = "getById" multiplicity = "one" remark="根据主键获取数据:${table.sqlName}">
-           SELECT *
-                   FROM ${table.sqlName}
-                   WHERE 1=1
+           SELECT * FROM ${table.sqlName} WHERE 1=1
 #foreach ( $column in $table.columnList )
-                   AND $column.sqlName = $column.javaName
+           AND $column.sqlName = $column.javaName
 #end
      </operation>
 </table>
