--- a/src/main/resources/XMLMapper.vm
+++ b/src/main/resources/XMLMapper.vm
@@ -1,6 +1,6 @@
-
 #parse("./lib.vm")
-
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
 <mapper>
 
      <resultMap id="BaseResultMap">
@@ -22,4 +22,4 @@
         ${operation.cdata}
     </#operation2Sql($operation.name)>
  #end
- </mapper>
+</mapper>
