--- a/src/main/resources/XMLMapper.vm
+++ b/src/main/resources/XMLMapper.vm
@@ -1,9 +1,9 @@
 #parse("./lib.vm")
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
-<mapper>
+<mapper namespace="${xmlMapper.doMapper.packageName}.${xmlMapper.doMapper.className}">
 
-     <resultMap id="BaseResultMap">
+     <resultMap id="BaseResultMap" type="${xmlMapper.doClass.packageName}.${xmlMapper.doClass.className}">
          #foreach ( $column in $xmlMapper.cfTable.columns )
             #if($column.name=="id")
                 <id column="$column.name" property="$column.javaName" jdbcType="$column.sqlType" javaType="$column.javaType"/>
@@ -13,7 +13,6 @@
          #end
      </resultMap>
 
-     <#-- baseSql -->
       <sql id="Base_Column_List">#foreach ( $column in $xmlMapper.cfTable.columns )${column.name}#if($xmlMapper.cfTable.columns.size() != $velocityCount),#end#end</sql>
 
  #foreach ( $operation in $xmlMapper.cfTable.operations )
