--- a/src/main/resources/initTableXml.vm
+++ b/src/main/resources/initTableXml.vm
@@ -8,16 +8,15 @@
      <operation name="insert" paramType="object" remark="插入表:${table.sqlName}">
         <sql>
          <selectKey resultType="java.lang.Long" keyProperty="id" order="AFTER">
-            SELECT
-            LAST_INSERT_ID()
-         </selectKey>
+                       SELECT @@IDENTITY
+          </selectKey>
         INSERT INTO ${table.sqlName}(
 #foreach($column in $table.columnList)
             #if( $velocityCount != 1),#end$column.sqlName
 #end
           )VALUES(
 #foreach($column in $table.columnList)
-            #if($velocityCount != 1),#end#{$column.javaName}
+            #if($velocityCount != 1),#end  #if($column.sqlName == 'CREATE_DATE' || $column.sqlName == 'MODIFY_DATE')CURRENT_TIMESTAMP#else#{$column.javaName}#end
 #end
           )
           </sql>
@@ -26,10 +25,13 @@
      <operation name="update" paramType="object" remark="更新表:${table.sqlName}">
         <sql>
         UPDATE ${table.sqlName} SET
+        MODIFY_DATE = CURRENT_TIMESTAMP
 #foreach ( $column in $table.columnList )
-         #if($velocityCount != 1),#end$column.sqlName = #{$column.javaName}
+#if($column.sqlName != 'ID' && $column.sqlName != 'CREATE_DATE' && $column.sqlName != 'MODIFY_DATE')
+            <if test="$column.javaName != null and $column.javaName != ''">,$column.sqlName = #{$column.javaName}</if>
 #end
-        WHERE id = #{id}
+#end
+        WHERE ID = #{id}
         </sql>
      </operation>
 
@@ -41,7 +43,7 @@ DELETE FROM ${table.sqlName} WHERE
 #end
         </sql>
      </operation>
-     <operation name = "getById" multiplicity = "one" remark="根据主键获取数据:${table.sqlName}">
+     <operation name = "getById" multiplicity = "one" resultMap="BaseResultMap" remark="根据主键获取数据:${table.sqlName}">
           <sql>
             SELECT * FROM ${table.sqlName} WHERE
 #foreach ( $column in $table.primaryKeys.columnList )
@@ -50,15 +52,15 @@ DELETE FROM ${table.sqlName} WHERE
            </sql>
      </operation>
 
-      <operation name = "getAll" multiplicity = "many" remark="根据主键获取数据:${table.sqlName}">
+      <operation name = "queryAll" multiplicity = "many" resultMap="BaseResultMap" remark="根据主键获取数据:${table.sqlName}">
            <extraparams>
               <param name='conditionObject' javatype="java.lang.Object"/>
            </extraparams>
             <sql>
 SELECT * FROM ${table.sqlName} WHERE 1=1
 #foreach ( $column in $table.columnList )
-            <if test="conditionObject.$column.javaName != null and conditionObject.$column.javaName != ''">
-                AND $column.sqlName = #{conditionObject.$column.javaName}
+            <if test="$column.javaName != null and $column.javaName != ''">
+                AND $column.sqlName = #{$column.javaName}
            </if>
 #end
             </sql>
@@ -66,22 +68,22 @@ SELECT * FROM ${table.sqlName} WHERE 1=1
 
 
 
-     <operation name = "getByPageCount" multiplicity = "many" resultType="java.lang.Integer"  remark="根据主键获取数据:${table.sqlName}">
+     <operation name = "queryByPageCount" multiplicity = "one" resultType="int"  remark="根据主键获取数据:${table.sqlName}">
           <extraparams>
               <param name='conditionObject' javatype="java.lang.Object"/>
           </extraparams>
           <sql>
 SELECT COUNT(1) FROM ${table.sqlName} WHERE 1=1
 #foreach ( $column in $table.columnList )
-           <if test="conditionObject.$column.javaName != null and conditionObject.$column.javaName != ''">
-               AND $column.sqlName = #{conditionObject.$column.javaName}
+           <if test="$column.javaName != null and $column.javaName != ''">
+               AND $column.sqlName = #{$column.javaName}
            </if>
 #end
     </sql>
      </operation>
 
 
-     <operation name = "getByPage" multiplicity = "many" remark="根据主键获取数据:${table.sqlName}">
+     <operation name = "queryByPage" multiplicity = "many"  resultMap="BaseResultMap" remark="根据主键获取数据:${table.sqlName}">
           <extraparams>
                <param name='start' javatype="java.lang.Integer"/>
                <param name='limit' javatype="java.lang.Integer"/>
